--- a/src/pages/Newsletter/Newsletter.css
+++ b/src/pages/Newsletter/Newsletter.css
@@ -44,15 +44,17 @@
         a:nth-child(even) {
             /* background-color: #d9d9d9; */
             width: 90%;
+            overflow: hidden;
             aspect-ratio: 1;
-            margin: 3rem 2rem 1rem;
+            margin: 3rem 1.5rem 1rem;
         }
 
         a:nth-child(odd) {
             /* background-color: #d9d9d9; */
             width: 90%;
+            overflow: hidden;
             aspect-ratio: 1;
-            margin: 1rem 2rem 3rem;
+            margin: 1rem 1.5rem 3rem;
         }
     }
 
